--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -36,7 +36,7 @@
   background-repeat: no-repeat;
 }
 .toolbar{
-    min-height: 65px;
+    min-height:65px;
     position: sticky;
     top: 0;
     width:100%;
@@ -124,8 +124,8 @@
   box-shadow: 5PX 5PX 5PX grayscale($color: #00000091);
 }
 .circle_frame{
- border-radius: 50%;
- max-width: 800px;
+ border-radius: 60px;
+ max-width: 400px;
 }
 .circle_div{
   position: relative;
@@ -172,32 +172,46 @@
          min-height:55px;
 }
 .card_box{
-        display:flex;
+        //display:flex;
         height: 500px;
-        background-color: grayscale($color: #dbd1d1);
+        //background-color: grayscale($color: #dbd1d1);
 }
  .card{
     display:flex;
-    height: 400px;
-    min-width: 200px;
-    max-width: 200px;
-    background-color: grayscale($color: #797575);
+    border-radius: 20px;
+    height: 310px;
+    min-width: 230px;
+    max-width: 230px;
+    background-color: white;
 }
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined");
 .card2{
+    border-radius: 20px;
     display:flex;
-    height: 400px;
+    height: 300px;
     min-width: 200px;
     background-color: grayscale($color: #636262);
 }
 .card3{
+  border-radius: 20px;
     display:flex;
-    height: 400px;
+    height: 300px;
     min-width: 200px;
     background-color: grayscale($color: #535050);
 }
 .card4{
     display:flex;
-    height: 400px;
+    border-radius: 20px;
+    height: 300px;
     min-width: 200px;
     background-color: grayscale($color: #494747);
 }
@@ -210,13 +224,25 @@
     max-height: 550px;
     overflow:scroll;
 }
-    
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 50px; }
+.material-icons-outlined.md-48 { font-size: 45px; }
 .carousel-item{
-    height: 32rem;
+    height:60.8rem;
+    //bottom: 70px;
     background:black;
-    text-shadow: 6px 3px 3px black;
+    //text-shadow: 6px 3px 3px black;
     color:white;
     position: relative;
+}
+
+.contact_div{
+  min-height: 820px;
+  //background-color: rgb(0, 92, 92);
+  background-color: rgba(0, 70, 83, 0.863);
+  color: white;
 }
 .container{
     position: absolute;
@@ -228,15 +254,125 @@
 .black{
   background: black;
 }
+.custom-shape-divider-bottom-1632757967 {
+  position:absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1632757967 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 167px;
+}
+
+.custom-shape-divider-bottom-1632757967 .shape-fill {
+  fill: #FFFFFF;
+}
+.custom-shape-divider-top-1632767659 .shape-fill {
+  fill: #FFFFFF;
+}
+.custom-shape-divider-top-1632767658 .shape-fill {
+  fill: rgba(0, 70, 83, 0.863);
+  z-index: -1;
+  top: 5px;
+  position: relative;
+  background-color: white;
+}
+.custom-shape-divider-top-163276765 .shape-fill {
+  bottom: 10px !important;
+  z-index: -1;
+  top: 5px;
+  position: relative;
+  background-color: white;
+}
+.custom-shape-divider-top-1632757965 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 167px;
+  bottom: 10px !important;
+}
+.custom-shape-divider-bottom-1632909480 {
+  position: absolute;
+  z-index: 3;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+.carousel-slide{
+  position: relative;
+  z-index: 0;
+  bottom: 70px;
+}
+.custom-shape-divider-bottom-1632909480 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 156px;
+}
+
+.custom-shape-divider-bottom-1632909480 .shape-fill {
+  fill: #FFFFFF;
+}
+
 .overlay-image{
-    position:absolute;
+    position: absolute;
+    z-index: 0;
     bottom: 0;
     left: 0;
     right: 0;
     top: 0;
     background-position: center;
     background-size: cover;
-    opacity:0.5;
+    //opacity:.5;
+}
+.custom-shape-divider-top-1632909775 {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  color: white;
+}
+.custom-shape-divider-bottom-1632909995 {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1632909995 svg {
+  position: relative;
+  display: block;
+  width: calc(107% + 1.3px);
+  height: 144px;
+}
+
+.custom-shape-divider-bottom-1632909995 .shape-fill {
+  fill: #FFFFFF;
+}
+.custom-shape-divider-top-1632909775 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 113px;
+}
+
+.custom-shape-divider-top-1632909775 .shape-fill {
+  fill: #FFFFFF;
 }
 .about_paragraph{
     max-width: 105px;
@@ -259,6 +395,7 @@
     margin-top: 40px;
     margin: auto;
 }
+
 .square2{
   height: 100px;
   width: 100px;
@@ -385,7 +522,7 @@ input {
   
   background: transparent;
   outline: none;
-  color: #d4c5b3;
+  //color: #d4c5b3;
   
   border: solid 1px #b3aca7;
   border-bottom: none;
