--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -12,23 +12,28 @@
     </div>
   </div>
 -->
+
 <head>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
-        </style>        
- </head>
-<div fxLayout="column">
+    </style>
+</head>
+<div fxLayout="column" id="header">
     <mat-toolbar class="toolbar" fxLayout="row" fxFlex="grow shrink 100%"
         style="background-color:rgba(255, 255, 255, 0)">
         <div class="logo" fxFlex="10">
-            <img src="assets/tenatrans.png" height="35px">
+            <a href="#header">
+                <img src="assets/tenatrans.png" height="35px">
+            </a>
         </div>
 
-        <div class="material_icon" fxFlex="grow-shrink 100%" fxLayoutAlign="end end">
-            <button mat-button
-                style="background-color: rgb(34, 179, 204); width:140px;border-radius:65px;color: white;">
-                Contact Us
-            </button>
+        <div class="material_icon" fxFlex="grow-shrink 100%" fxLayoutAlign="end end" href="#contact_id">
+            <a href="#contact">
+                <button mat-button
+                    style="background-color: rgb(34, 179, 204); width:140px;border-radius:65px;color: white;">
+                    Contact Us
+                </button>
+            </a>
         </div>
 
         <div fxLayout=row fxLayoutGap=10px>
@@ -52,12 +57,25 @@
             <div class="carousel-item active" fxLayoutAlign="center center">
                 <div class="overlay-image" style="background-image:linear-gradient(to bottom, rgba(116, 116, 116, 0.781), rgba(51, 128, 141, 0.952)),
                 url('assets/blue.png');color: white;" fxLayoutAlign="center center" fxLayout="column">
-                    <div style="width: 60%; text-align: center;bottom: 85px;position: relative;" fxLayoutGap="25px" fxLayout="column">
-                        <h1 style="color: white;font-size: 58px;font-family:'Ubuntu', sans-serif;">Transportation Adaptability & Foresight with Network Scale.</h1>
-                        <p style="color: white; font-size: 25px;font-family:'Ubuntu', sans-serif;">The Tena network reaches across the transportation industry to connect
+                    <div style="width: 60%; text-align: center;bottom: 85px;position: relative;" fxLayoutGap="25px"
+                        fxLayout="column">
+                        <h1 *ngIf="isNotWideScreenContact$ | async"
+                            style="color: white;font-size: 58px;font-family:'Ubuntu', sans-serif;">Revolutionizing the
+                            Transportation Industry With Insight & Foresight</h1>
+                        <h1 *ngIf="isWideScreenContact$ | async"
+                            style="color: white;font-size: 32px;font-family:'Ubuntu', sans-serif;">Revolutionizing the
+                            Transportation Industry</h1>
+                        <p *ngIf="isNotWideScreenContact$ | async"
+                            style="color: white; font-size: 23px;font-family:'Ubuntu', sans-serif;">The Tena network
+                            reaches across the transportation industry to connect
                             shippers, carriers,
                             brokers and other market participants, introducing unprecedented levels of transparency,
                             planning, and coordination.</p>
+                        <p *ngIf="isWideScreenContact$ | async"
+                            style="color: white; font-size: 24px;font-family:'Ubuntu', sans-serif;">The Tena network
+                            reaches across the transportation industry to connect
+                            shippers, carriers,
+                            brokers and other market participants.</p>
                     </div>
                     <div class="custom-shape-divider-bottom-1632909480">
                         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
@@ -94,9 +112,9 @@ url('assets/blue.png'); height: 47.5rem;">
 </div>
 -->
     <!--White Block beneath Carousel  104:144-->
-    <div class="container_2" fxFlex="100">
+    <div *ngIf="isNotWideScreen$ | async" class="container_2" fxFlex="100">
         <div class="card_box" fxLayout="row" fxLayoutGap="55px" fxLayoutAlign="center center" fxFlex="1 1 100%">
-            <mat-card class="card mat-elevation-z8" fxLayoutAlign="start center" fxLayout="column">
+            <mat-card class="card mat-elevation-z8 full_width" fxLayoutAlign="start center" fxLayout="column">
                 <mat-card-title class="material-icons-outlined md-48" style="color:rgb(255, 102, 0);">
                     tungsten
                 </mat-card-title>
@@ -142,11 +160,62 @@ url('assets/blue.png'); height: 47.5rem;">
     </div>
 
 
+    <!--SMALL BROWSER SWITCH COMPONENT FOR 4 CARD LAYOUT SECTION-->
+
+    <div *ngIf="isWideScreen$ | async" fxLayout="Column" class="container_2" fxFlex="100">
+        <div>
+            <div style="padding-top: 30px;" fxLayout="column" fxLayoutGap="30px" fxLayoutAlign="center center"
+                fxFlex="1 1 100%">
+                <mat-card class="card mat-elevation-z8" fxLayoutAlign="start center" fxLayout="column">
+                    <mat-card-title class="material-icons-outlined md-48" style="color:rgb(255, 102, 0);">
+                        tungsten
+                    </mat-card-title>
+                    <mat-card-subtitle style="color: rgb(95, 95, 95);">New Ideas</mat-card-subtitle>
+                    <mat-card-content>
+                        <p style="color: darkgrey; font-weight: 100; text-align: center;">Tena is always expanding and
+                            discovering new ways of managing loads. With our in house software we will revolutionize the
+                            transportation industry.</p>
+                    </mat-card-content>
+                </mat-card>
+                <mat-card class="card mat-elevation-z8" fxLayoutAlign="start center" fxLayout="column">
+                    <mat-card-title class="material-icons-outlined md-48" style="color:rgb(255, 102, 0);">
+                        business_center
+                    </mat-card-title>
+                    <mat-card-subtitle style="color: rgb(95, 95, 95);">Network</mat-card-subtitle>
+                    <mat-card-content>
+                        <p style="color: darkgrey; font-weight: 100; text-align: center;">We partner with a hand full of
+                            Carriers and Brokers who help build a portion of the transportation industry.</p>
+                    </mat-card-content>
+                </mat-card>
+                <mat-card class="card mat-elevation-z8" fxLayoutAlign="start center" fxLayout="column">
+                    <mat-card-title class="material-icons md-48" style="color:rgb(255, 102, 0);">
+                        trending_up
+                    </mat-card-title>
+                    <mat-card-subtitle style="color: rgb(95, 95, 95);">Statistcs</mat-card-subtitle>
+                    <mat-card-content>
+                        <p style="color: darkgrey; text-align: center;">Tena is always expanding and discovering new
+                            ways of
+                            managing loads. With our in house software we will revolutionize the transportation
+                            industry.
+                        </p>
+                    </mat-card-content>
+                </mat-card>
+            </div>
+        </div>
+
+
+    </div>
+
+
+
+
+
     <div fxLayout="column" fxLayoutGap="20px" fxLayoutAlign="center center" flex="grow shrink 100%"
         style="margin-bottom: 180px;margin-top: 75px;">
 
         <h1 style="color: rgb(95, 95, 95);">About Us</h1>
-        <p style="max-width:870px; text-align: center; color: darkgrey; font-size: 22px;">Here at Tena we believe in
+        <p style="max-width:870px; text-align: center; color: darkgrey; font-size: 22px;width: 77%;">Here at Tena we
+            believe in
             innovation. The power of change gives us the upper hand. Utilizing
             the latest management software, fleet tracking and communications devices, Tena transport will not only grow
             with the market but also mold it.</p>
@@ -207,6 +276,7 @@ url('assets/blue.png'); height: 47.5rem;">
 
 -->
 
+
     <div fxLayout="Column" class="contact_div" fxLayoutGap="20px">
         <div class="custom-shape-divider-top-1632909775">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
@@ -228,7 +298,8 @@ url('assets/blue.png'); height: 47.5rem;">
                 GET IN
                 TOUCH</h1>
         </div>
-        <div fxFlex=80 fxLayout="Row" fxLayoutAlign="center start" fxLayoutGap="130px">
+        
+        <div *ngIf="isNotWideScreenContact$ | async" fxFlex=80 fxLayout="Row" fxLayoutAlign="center start" fxLayoutGap="130px">
             <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" fxFlex=10>
                 <span
                     style="background-color: rgb(174, 199, 199);color: white;border-radius: 50px; height: 90px;width: 90px;"
@@ -267,6 +338,51 @@ url('assets/blue.png'); height: 47.5rem;">
                 <span style="text-align:center;">hr@tenatrans.com</span>
             </div>
         </div>
+
+
+        <!--MOBILE SWITCH CASE FOR THIS COMPONENT-->
+        <div *ngIf="isWideScreenContact$ | async" fxFlex=80 fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="40px">
+            <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" fxFlex=10>
+                <span
+                    style="background-color: rgb(174, 199, 199);color: white;border-radius: 50px; height: 90px;width: 90px;"
+                    class="material-icons md-48" fxLayoutAlign="center center">room</span>
+                <h3 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-weight: 600;">Address</h3>
+                <span style="font-weight: bold;text-align: center;">Casa Grande Office</span>
+                <span style="text-align:center;">1146 Jimmie Kerr Blvd,
+                    </span>
+                    <span style="text-align:center;">
+                        Casa Grande, AZ 85122</span>
+            </div>
+            <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" fxFlex=10>
+                <span
+                    style="background-color: rgb(174, 199, 199);color: white;border-radius: 50px; height: 90px;width: 90px;"
+                    class="material-icons md-48" fxLayoutAlign="center center">phone</span>
+                <h3
+                    style="font-weight:800; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-weight: 600;">
+                    Phone</h3>
+                <span style="font-weight: bold;text-align: center;">General</span>
+                <span style="text-align:center;">(520) 421-3173</span>
+                <span style="font-weight: bold;text-align: center;">Accounting</span>
+                <span style="text-align:center;">(520) 836-5664</span>
+                <span style="font-weight: bold;text-align: center;">Brokerage</span>
+                <span style="text-align:center;">(520) 510-0905</span>
+            </div>
+            <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" fxFlex=10>
+                <span
+                    style="background-color: rgb(174, 199, 199);color: white;border-radius: 50px; height: 90px;width: 90px;"
+                    class="material-icons md-48" fxLayoutAlign="center center">email</span>
+                <h3
+                    style="font-weight:800; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-weight: 600;">
+                    Email</h3>
+                <span style="font-weight: bold;text-align: center;">General</span>
+                <span style="text-align:center;">tena@tenalogistics.com</span>
+                <span style="font-weight: bold;text-align: center;">Accounting</span>
+                <span style="text-align:center;">accounting@tenatrans.com</span>
+                <span style="font-weight: bold;text-align: center;">Human Resources</span>
+                <span style="text-align:center;">hr@tenatrans.com</span>
+            </div>
+        </div>
+
         <div class="custom-shape-divider-bottom-1632909995">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
                 preserveAspectRatio="none">
@@ -299,7 +415,8 @@ url('assets/blue.png'); height: 47.5rem;">
         </div>
     </div>
 -->
-    <div fxLayout="row" style="height: 550px;">
+
+    <div *ngIf="isNotWideScreen$ | async" fxLayout="row" style="height: 550px;" id="contact" class="contact">
         <div fxFlex=50 fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="25px" style="padding-left: 14%;">
             <h1
                 style="color: rgb(37, 43, 99); text-align: start; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-size: 50px;font-weight: 600">
@@ -309,7 +426,7 @@ url('assets/blue.png'); height: 47.5rem;">
                 Human Resources
                 department will contact you after their review of your submitted information.</p>
         </div>
-        <div fxFlex=50 fxLayout="column" fxLayoutGap="25px" fxLayoutAlign="center start" >
+        <div fxFlex=50 fxLayout="column" fxLayoutGap="25px" fxLayoutAlign="center start">
             <div fxLayout="row" fxLayoutGap="30px">
 
                 <input matInput
@@ -344,6 +461,61 @@ url('assets/blue.png'); height: 47.5rem;">
             </div>
         </div>
     </div>
+
+
+
+
+    <!--MOBILE SWITCH CASE COMPONENT-->
+    <div *ngIf="isWideScreen$ | async" fxLayout="column" style="height: 550px;margin-bottom: 130px;padding-top: 50px;" id="contact"
+        class="contact" fxLayoutGap="64px">
+        <div fxFlex=50 fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="15px">
+            <h1
+                style="color: rgb(37, 43, 99); text-align: start; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-size: 50px;font-weight: 600">
+                Message Us</h1>
+            <p style="color: darkgrey;max-width: 450px;text-align: center;width: 84%; font-size: 15px;">If you wish to be considered for
+                employment
+                at Tena Transport,
+                please do not send a message, here – instead, please complete Tena Transport's job application and our
+                Human Resources
+                department will contact you after their review of your submitted information.</p>
+        </div>
+        <div fxFlex=50 fxLayout="column" fxLayoutGap="25px" fxLayoutAlign="center center">
+            <div fxLayout="row" fxLayoutGap="30px">
+
+                <input
+                    style="background-color: rgb(255, 255, 255);width:160px;height: 40px;border-radius:3px;color: black;"
+                    type="text" placeholder="First Name" value="">
+                <input
+                    style="background-color: rgb(255, 255, 255);width:160px;height: 40px;border-radius:3px;color: black;"
+                    type="text" placeholder="Last Name" value="">
+            </div>
+            <div>
+                <input
+                    style="background-color: rgb(255, 255, 255);width:350px;height: 40px;border-radius:3px;color: black;"
+                    type="text" placeholder="Email" value="">
+            </div>
+            <div>
+                <input
+                    style="background-color: rgb(255, 255, 255);width:350px;height: 150px;border-radius:3px;color: black; margin-bottom: 10px;"
+                    type="text" placeholder="Message" value="">
+            </div>
+            <div>
+                <div class="material_icon" fxFlex="grow-shrink 100%">
+                    <button mat-button
+                        style="background-color: rgb(34, 179, 204); width:60px;min-height:50px;border-radius:100px;color: white;font-weight: bold;">
+                        <span class="material-icons-outlined">
+                            send
+                        </span>
+
+
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <!--Carousel Section Code Liner 303:354--->
 
     <div class="container_2" fxlayout="row" fxFlex="100">
