--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -93,6 +93,7 @@
   bottom: 372px;
   box-shadow: 2PX 2PX 5PX grayscale($color: #00000091);
 }
+
 .mat_card_float2{
   z-index:2;
   background-color: rgb(204, 204, 204);
@@ -184,6 +185,15 @@
     max-width: 230px;
     background-color: white;
 }
+.card_mobile{
+  display:flex;
+  border-radius: 20px;
+  height: 310px;
+  min-width: 180px;
+  max-width: 180px;
+  background-color: white;
+}
+
 .example-form {
   min-width: 150px;
   max-width: 500px;
@@ -379,7 +389,7 @@
     padding-top: 90px;
 }
 .material_icon{
-    padding-right: 50px;
+    padding-right: 1%;
 }
 .rectangle{
     height: 550px;
